[package]
name = "neotron-romfs"
version = "1.0.0"
edition = "2021"
description = "Parse a Neotron ROM-FS image"
repository = "https://github.com/Neotron-Compute/neotron-romfs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neotron-api = "0.1"
